--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./dist/output.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-   <p class="">
-    Booksky
-   </p>
-   <p>
-    loresm
-   </p>
+    <div class="text-center gap-5">
+        <p class="text-3xl poppins-medium  p-10 bg-[#FD6569]">
+            Booksky
+        </p>
+        <button type="submit" class="border-2 rounded bg-gray-400">
+            Show!
+        </button>
+    </div>
+    <div class="popup">
+        <p class="hanuman-regular text-[16px]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repellat
+            optio
+            officiis error rem ipsum
+            reprehenderit quisquam quas, repellendus facilis ullam aut sint, consequatur vitae corrupti ea et alias
+            quia?</p>
+    </div>
+    <div class="text-center z-10 fixed">
+        <button type="submit" class="border-2 rounded bg-gray-400">close</button>
+    </div>
+    <div class="bg-black text-xl text-white fixed inset-0 flex justify-center items-center opacity-50">
+        <div >
+            <p class="bg-black">Overlay</p>
+        </div>
+    </div>
+
+
+    <script>
+
+    </script>
+
+
+
 </body>
+
 </html>
